--- a/css/moinde5ans.css
+++ b/css/moinde5ans.css
@@ -2,10 +2,12 @@
   font-family: 'bunny';
   src: url('../assets/fonts/bunny$mambo.ttf');
 }
-
-p{
+#gris{
+  background-color: lightgray;
+}
+.descriptif{
   text-align: justify;
-  font-family: 'bunny';
+  font-family: 'bunny', Georgia, Arial, sans-serif;
   font-size: 120%;
   text-align-last: left;
   color: rgb(218, 161, 13);
@@ -13,49 +15,57 @@ p{
 
 .top{
   border: 1px solid black;
-  height: 20%;
+  height: 700px;
   width: 100%;
   overflow: hidden;
 }
 
 /*Permet de crée la bordure et donne la disposiont de mes boite figure*/
 figure{
+  position: relative;
   display: inline-block; /*permet d'aligner les blocks figures*/
-  margin: auto center; /*permet de centrer automatiquement la figure sur la page*/
   border: 2px solid black; /*permet d'ajouter une bordure*/
   background-color: white; /*permet de modifier la couleur a l'intérieur de la bordure de l'element figure*/
-  height: 20%; /*permet de donner une hauteur a mes blocks figures*/
-  width: 20%; /*permet de donner une largeur a mes blocks figures*/
+  height: 250px; /*permet de donner une hauteur a mes blocks figures*/
+  width: 300Px; /*permet de donner une largeur a mes blocks figures*/
+  overflow: hidden;
+  transition-property: height, width;
+  transition-duration: 0.4s;
 }
 
 figure img{
   display: flex;
-  height: 50%; /*permet de donner une hauteur a mes images*/
-  width: 40%; /*permet de donner une largeur a mes images */
-  margin: 0 auto;/*permet de crée l'espacement entre mes images et mes blocks figures*/
+  height: 250px; /*permet de donner une hauteur a mes images*/
+  width: 150px; /*permet de donner une largeur a mes images */
 }
 
 figure figcaption{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0 auto;
+
 }
 
 figure h5{
   position: relative;
-  left: 18px;
-  margin: 0 auto;
+  top: -150px;
+  left: 20px;
 }
 
 figure button{
   border: 2px solid black;
   background-color: darkgray;
   position: relative;
-  right: 20px;
-  margin: 0 auto;
 }
 
 figure span{
   color: darkred;
+}
+
+.jouets{
+  display: inline;
+  font-family: Georgia, Arial, sans-serif;
+  font-size: 16px;
+}
+figure:hover{
+  height: 700px;
+  width: 100%;
+  overflow: visible;
 }
