--- a/css/moinde5ans.css
+++ b/css/moinde5ans.css
@@ -1,6 +1,63 @@
-#gris{
-  background-color: lightgray;
+@font-face {
+  font-family: 'ubuntu', sans-serif;
 }
+
+html, body{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-image: radial-gradient(circle at top left,red,yellow,white);
+  background-repeat: no-repeat;
+}
+.logo{
+  height: 80%;
+  display: flex;
+  /*justify-content: center;*/
+  margin: auto;
+}
+nav{
+  height: 100%;
+  width: 95%;
+  background-color: white;
+  font-style: bolder;
+  text-align: center;
+  margin: 0 auto;
+}
+ul{
+  display: flex;
+  flex-direction: row;
+  margin: 0 auto;
+}
+ul li {
+  display: inline;
+  margin: 30px;
+  font-style: normal;
+  font-variant: normal;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 400;
+  /*border: 2px solid black;*/
+}
+ul li a{
+  color: #76159e;
+  font-family: 'ubuntu',sans-serif;
+  text-decoration: none;
+  text-align: right;
+  font-size: 18px;
+}
+h1{
+  font-family: sans-serif;
+  color: red;
+}
+
+
+
+
+
+
+
+
+/*corp page moins de 5 ans*/
 .descriptif{
   text-align: justify;
   font-family: Georgia, Arial, sans-serif;
@@ -55,4 +112,28 @@ button{
   border-radius: 10px;
   background-color: rgb(78, 160, 212);
   color: rgb(255, 255, 255);
+}
+
+
+/*bas de page*/
+footer{
+  font-weight: normal;
+  font-family: sans-serif;
+  color: #800000;
+  /*margin-left: 20px;*/
+  /*padding-top: 10px;
+  margin-top: 100px;*/
+  margin: 0 auto;
+  width: 90%;
+  height: 50px;
+  background-color: #32CD32;
+}
+
+.Copyright ul li a{
+color: #32CD32;
+height: 30px;
+width: 30px;
+display: inline-block;
+text-align: left;
+margin: 0 auto;
 }
