--- a/css/moinde5ans.css
+++ b/css/moinde5ans.css
@@ -11,41 +11,37 @@ html, body{
 }
 .logo{
   height: 80%;
-  display: flex;
-  /*justify-content: center;*/
+  display: block;
   margin: auto;
 }
-nav{
-  height: 100%;
-  width: 95%;
-  background-color: white;
-  font-style: bolder;
-  text-align: center;
-  margin: 0 auto;
+
+nav ul
+{
+    list-style-type: none;
+    display: flex;
+
 }
-ul{
-  display: flex;
-  flex-direction: row;
-  margin: 0 auto;
+
+nav li
+{
+    margin: auto;
 }
-ul li {
-  display: inline;
-  margin: 30px;
-  font-style: normal;
-  font-variant: normal;
-  text-align: center;
-  font-size: 40px;
-  font-weight: 400;
-  /*border: 2px solid black;*/
+
+nav a
+{
+    font-size: 1.5em;
+    color: #181818;
+    text-decoration: none;
 }
-ul li a{
-  color: #76159e;
-  font-family: 'ubuntu',sans-serif;
-  text-decoration: none;
-  text-align: right;
-  font-size: 18px;
+
+nav a:hover
+{
+    color: #760001;
+    border-bottom: 3px solid #760001;
 }
-h1{
+
+
+h5{
   font-family: sans-serif;
   color: red;
 }
@@ -117,23 +113,23 @@ button{
 
 /*bas de page*/
 footer{
-  font-weight: normal;
-  font-family: sans-serif;
-  color: #800000;
-  /*margin-left: 20px;*/
-  /*padding-top: 10px;
-  margin-top: 100px;*/
-  margin: 0 auto;
-  width: 90%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid Black;
   height: 50px;
-  background-color: #32CD32;
+  width: 80%;
+  margin: auto;
+  background-image: linear-gradient(darkgray, lightgreen);
 }
-
-.Copyright ul li a{
-color: #32CD32;
-height: 30px;
-width: 30px;
-display: inline-block;
-text-align: left;
-margin: 0 auto;
+#copy{
+  position: relative;
+  font-size: 15px;
+  left: 35px;
+}
+#icone{
+  position: relative;
+  font-size: 30px;
+  right: 30px;
 }
