--- a/css/contact.css
+++ b/css/contact.css
@@ -1,47 +1,52 @@
 @font-face {
-  font-family: 'bunny$mambo.ttf', sans-serif;
+  font-family: 'ubuntu', sans-serif;
 }
 
 html, body{
   margin: 0;
   padding: 0;
   width: 100%;
-  background-image: radial-gradient(circle at top left,red,yellow,white);
-  background-repeat: no-repeat;
+
 }
 .logo{
-  height: 150px;
-  display: flex;
+  width: 50%;
+  display: block;
   margin: auto;
 }
-nav{
-  height: 70px;
-  width: 95%;
-  background-color: white;
-  font-style: bolder;
-  text-align: center;
-  margin: 0 auto;
+
+header{
+  background-image: radial-gradient(yellow, rgb(218, 161, 13));
+  background-repeat: no-repeat;
+  box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.5);
 }
-ul{
-  float: left;
-  margin: 0 auto;
+nav ul
+{
+    list-style-type: none;
+    display: flex;
+
 }
-ul li {
-  display: inline;
-  margin: 30px;
-  font-style: normal;
-  font-variant: normal;
-  text-align: center;
-  font-size: 40px;
-  font-weight: 400;
-  /*border: 2px solid black;*/
+
+nav li
+{
+    margin: 0.5%;
 }
-ul li a{
-  color: #76159e;
-  font-family: 'bunny$mambo.ttf', sans-serif;
-  text-decoration: none;
-  text-align: right;
-  font-size: 18px;
+
+nav a
+{
+    font-size: 1.5em;
+    color: #181818;
+    text-decoration: none;
+}
+
+nav a:hover
+{
+    color: #760001;
+    border-bottom: 3px solid #760001;
+}
+
+h5{
+  font-family: sans-serif;
+  color: red;
 }
 h1{
   font-family: 'bunny$mambo.ttf', sans-serif;
@@ -92,23 +97,55 @@ h1{
 
 /*bas de page*/
 footer{
-  font-weight: normal;
-  font-family: sans-serif;
-  color: #800000;
-  /*margin-left: 20px;*/
-  /*padding-top: 10px;
-  margin-top: 100px;*/
-  margin: 0 auto;
-  width: 90%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid Black;
   height: 50px;
-  background-color: #32CD32;
+  width: 100%;
+  margin: auto;
+  background-image: linear-gradient(darkgray, lightgreen);
+}
+#copy{
+  position: relative;
+  font-size: 15px;
+  left: 35px;
+}
+#icone{
+  position: relative;
+  font-size: 30px;
+  right: 30px;
+}
+/*Bouton go to top*/
+a#cRetour{
+  border-radius:3px;
+  padding:10px;
+  font-size:15px;
+  text-align:center;
+  color:#fff;
+  background:rgba(218, 161, 13, 0.5);
+  position:fixed;
+  right:20px;
+  opacity:1;
+  z-index:99999;
+  transition:all ease-in 0.2s;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  text-decoration: none;
+}
+a#cRetour:before{ content: "\25b2"; }
+a#cRetour:hover{
+  background:rgba(218, 161, 13, 1);
+  transition:all ease-in 0.2s;
+}
+a#cRetour.cInvisible{
+  bottom:-35px;
+  opacity:0;
+  transition:all ease-in 0.5s;
 }
 
-.Copyright ul li a{
-color: #32CD32;
-height: 30px;
-width: 30px;
-display: inline-block;
-text-align: left;
-margin: 0 auto;
+a#cRetour.cVisible{
+  bottom:20px;
+  opacity:1;
 }
