--- a/css/game.css
+++ b/css/game.css
@@ -23,6 +23,7 @@ header{
   background-repeat: no-repeat;
   box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.6);
   padding-bottom: 0.01%;
+  margin-bottom: 2%;
 }
 nav ul
 {
@@ -73,6 +74,26 @@ footer{
   position: relative;
   font-size: 30px;
   right: 30px;
+}
+
+.gameDescription{
+  width: 770px;
+  height: auto;
+  position: relative;
+  margin: auto;
+  margin-top: 0.5%;
+  margin-bottom: 2%;
+}
+.gameDescription h2{
+  text-align: center;
+  color: red;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+.gameDescription p{
+  font-family: sans-serif;
+  font-weight: bold;
+  text-align: justify;
 }
 
 /*Bouton go to top*/
