--- a/css/accueil.css
+++ b/css/accueil.css
@@ -3,7 +3,6 @@ body{
   margin: 0;
   padding: 0;
   width: 100%;
-
 }
 /*HEADER*/
 .logo{
@@ -47,7 +46,7 @@ nav a:hover
     color: #760001;
     border-bottom: 3px solid #760001;
 }
-h5{
+nav h5{
   font-family: sans-serif;
   color: red;
 }
@@ -63,6 +62,9 @@ footer{
   margin: 0;
   background-image: radial-gradient(rgb(255, 180, 0), rgb(255, 120, 0));
   box-shadow: 0px -6px 4px rgba(0, 0, 0, 0.5);
+  text-decoration: none;
+  list-style-type: none;
+  color: white;
 }
 #copy{
   position: relative;
@@ -105,9 +107,14 @@ footer{
 }
 
 /*topvente*/
-#topvente{
-  width: 100%;
-  border: 2px, blue;
+#Top-vente-et-promo{
+  margin-bottom: 5%;
+}
+#Top-vente-et-promo h1{
+  color: red;
+  font-family: sans-serif;
+  font-weight: bold;
+  text-decoration: underline;
   text-align: center;
 }
 .topvente{
@@ -116,7 +123,71 @@ footer{
   margin: 0 auto;
 }
 
+/*corp page moins de 5 ans*/
+.descriptif{
+  text-align: justify;
+  font-family: Georgia, Arial, sans-serif;
+  font-size: 120%;
+  text-align-last: left;
+  color: rgb(218, 161, 13);
+}
+.top{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  height: 100%;
+  width: 80%;
+  margin: 0 auto;
+}
+.imgs img{
+  height: 200px;
+  width: 200px;
+  left: 20px;
+}
+.imgs{
+  border: 1px solid black;
+  height: 300px;
+  width: 200px;
+  margin: 10px;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.7), -3px -3px 5px rgba(255, 255, 255, 0.5);
+  background-color: rgb(255, 222, 0);
+
+}
+.imgs h5{
+  color: red;
+  font-family: Arial, sans-serif;
+  font-size: 1em;
+  text-align: center;
+}
+button{
+  position: relative;
+  top: -20px;
+  left: 135px;
+  height: 30px;
+  width: 70px;
+  border: 1px solid rgb(78, 160, 220);
+  border-radius: 10px;
+  background-color: rgb(78, 160, 212);
+  color: rgb(255, 255, 255);
+}
+
 /*bons de réduction*/
+#jeuPromo{
+  color: red;
+  font-family: sans-serif;
+  font-weight: bold;
+  text-decoration: underline;
+  text-align: center;
+}
+#reduText{
+  font-family: sans-serif;
+  font-weight: bold;
+  text-align: center;
+}
+
 #réductions{
   width: 100%;
   height: 650px;
@@ -174,4 +245,58 @@ a#cRetour.cInvisible{
 a#cRetour.cVisible{
   bottom:20px;
   opacity:1;
+}
+
+/*Présentation produits*/
+#presentation{
+  width: 80%;
+  height: 80%;
+  /*POSITION*/
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /*APPARENCE*/
+  background-color: white;
+  border: 1px solid black;
+}
+
+
+/*IMAGE DANS LA DIV DE PRESENTATION*/
+#imgPresentation{
+  height: 100%;
+  width: auto;
+  float: left;
+}
+/*TITRE DANS LA DIV DE PRESENTATION*/
+#titlePresentation{
+  color: red;
+  font-family: Arial, sans-serif;
+  text-align: center;
+}
+/*DESCRIPTIF DANS LA DIV DE PRESENTATION*/
+#textPresentation{
+  padding: 1%;
+}
+/*BOUTON DANS LA DIIV DE PRESENTATION*/
+#buttonPresentation{
+  position: absolute;
+  top: 90%;
+  left: 83%;
+  height: 40px;
+  width: 160px;
+  border: 1px solid rgb(78, 160, 220);
+  border-radius: 10px;
+  background-color: rgb(78, 160, 212);
+  color: rgb(255, 255, 255);
+}
+/*BOUTON QUITTER DE LA DIV DE PRESENTATION*/
+#quitPresentation{
+  background: url("../assets/miscellaneous/close-window.png");
+  background-size: contain;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  top: -2.5%;
+  left: 98.25%;
 }
