--- a/css/moinde5ans.css
+++ b/css/moinde5ans.css
@@ -77,6 +77,7 @@ footer{
 
 
 /*corp page moins de 5 ans*/
+
 .descriptif{
   text-align: justify;
   font-family: Georgia, Arial, sans-serif;
@@ -92,7 +93,7 @@ footer{
   justify-content: space-around;
   height: 100%;
   width: 80%;
-  margin: 0 auto;
+  margin: 0 auto 30px;
 }
 
 .imgs img{
