quasiment la fingit add pages/contact.html!

--- a/css/moinde5ans.css
+++ b/css/moinde5ans.css
@@ -74,7 +74,7 @@ footer{
   font-size: 30px;
   right: 30px;
 }
-
+presentation
 
 /*corp page moins de 5 ans*/
 
@@ -146,7 +146,6 @@ button{
   background-color: white;
   border: 1px solid black;
 }
-
 
 /*IMAGE DANS LA DIV DE PRESENTATION*/
 #imgPresentation{
