--- a/css/accueil.css
+++ b/css/accueil.css
@@ -77,7 +77,7 @@ footer{
   right: 30px;
 }
 
-/*barre_déroulante*/
+/*actus*/
 #actu{
   width: 100%;
   height: 50%;
@@ -95,6 +95,7 @@ footer{
 .actuContainer{
   padding-bottom: 2%;
 }
+
 .promo img{
   width: 22%;
   height: 5%;
@@ -104,6 +105,7 @@ footer{
   float: left;
   border-radius: 0 20px 0 20px;
   border: 2px solid orange;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.7), -3px -3px 5px rgba(255, 255, 255, 0.5);
 }
 
 /*topvente*/
@@ -260,8 +262,6 @@ a#cRetour.cVisible{
   background-color: white;
   border: 1px solid black;
 }
-
-
 /*IMAGE DANS LA DIV DE PRESENTATION*/
 #imgPresentation{
   height: 100%;
