--- a/css/contact.css
+++ b/css/contact.css
@@ -1,111 +1,70 @@
-@font-face {
-  font-family: 'ubuntu', sans-serif;
-}
-
-html, body{
+/*BODY*/
+body{
   margin: 0;
   padding: 0;
   width: 100%;
-
 }
+/*HEADER*/
 .logo{
-  width: 50%;
-  display: block;
+  width: 300px;
+  height: 150px;
+  background-size: cover;
+  background-repeat: no-repeat;
   margin: auto;
 }
-
+.logoImg{
+  height: 150px;
+  display: flex;
+  margin: auto;
+}
 header{
-  background-image: radial-gradient(yellow, rgb(218, 161, 13));
+  background-image: radial-gradient(rgb(255, 180, 0), rgb(255, 120, 0));
   background-repeat: no-repeat;
-  box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.6);
+  padding-bottom: 0.01%;
 }
 nav ul
 {
     list-style-type: none;
     display: flex;
-
 }
-
 nav li
 {
-    margin: 0.5%;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #fff;
+    margin: 0.55%;
 }
-
 nav a
 {
-    font-size: 1.5em;
-    color: #181818;
-    text-decoration: none;
+  font-family: sans-serif;
+  color: #fff;
+  text-decoration: none;
 }
-
 nav a:hover
 {
     color: #760001;
     border-bottom: 3px solid #760001;
 }
-
-h5{
+nav h5{
   font-family: sans-serif;
   color: red;
 }
-h1{
-  font-family: 'bunny$mambo.ttf', sans-serif;
-  color: red;
-  text-align: center;
-}
 
-/*barre_déroulante*/
-#contact1{
-  width: 90%;
-  height:100%;
-  margin: 0 auto;
-  background-image: url(../assets/accueil_imgs/tapisjouets.png);
-}
-.adresse, .telephone{
-  width: 40%;
-  height: auto;
-  background-color: white;
-  border: 2px solid orange;
-  border-radius: 0 20px 0 20px;
-  /*margin: 0 auto;*/
-  padding-top: 10px;
-  padding-bottom: 20px;
-  margin-top: 20px;
-  display: flex;
-  float: left;
-}
-#réseaux{
-  width: 90%;
-  background-color: lightblue;
-  /*border: 2px, blue;*/
-  margin: 0 auto;
-  /*text-align: center;*/
-}
-.mail, .facebook-twitter{
-  width: 40%;
-  height: 80%;
-  background-color: white;
-  border: 2px solid orange;
-  border-radius: 0 20px 0 20px;
-  /*margin: 0 auto;*/
-  padding-top: 10px;
-  padding-bottom: 20px;
-  margin-top: 20px;
-  display: flex;
-  float: left;
-}
-
-/*bas de page*/
+/*BAS DE PAGE*/
 footer{
   position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid Black;
   height: 50px;
   width: 100%;
-  margin: auto;
-  background-image: linear-gradient(darkgray, lightgreen);
+  margin: 0;
+  background-image: radial-gradient(rgb(255, 180, 0), rgb(255, 120, 0));
+  box-shadow: 0px -6px 4px rgba(0, 0, 0, 0.5);
+  text-decoration: none;
+  list-style-type: none;
+  color: white;
 }
 #copy{
   position: relative;
@@ -117,6 +76,70 @@ footer{
   font-size: 30px;
   right: 30px;
 }
+
+/*DESCRIPTION*/
+.description{
+  text-align: center;
+}
+.description h1{
+  color: rgb(255, 120, 0);
+  font-family: sans-serif;
+  font-weight: bold;
+}
+/*TEXTE DE DESCRIPTION*/
+.description p{
+  font-size: 0.9em;
+  font-family: sans-serif;
+  font-weight: bold;
+}
+
+/*CONTACTS*/
+.contacts{
+  width: 100%;
+  height: 30em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+.contactDiv{
+  padding: 2%;
+  margin: 2%;
+  width:40%;
+  height:40%;
+  border: 2px solid orange;
+  border-radius: 0 20px 0 20px;
+  box-shadow: 8px 8px 5px rgba(0, 0, 0, 0.7);
+}
+.contactDiv h1{
+  color: rgb(255, 120, 0);
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: bold;
+  text-decoration: underline;
+}
+.contactDiv p{
+  text-align: center;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 0.8em;
+}
+.important{
+  font-size: 1.5em;
+}
+#button{
+  position: relative;
+  left: 31%;
+  text-align: center;
+  height: 40px;
+  width: 200px;
+  border: 1px solid rgb(255, 100, 0);
+  border-radius: 10px;
+  background-color: rgb(255, 120, 0);
+  color: rgb(255, 255, 255);
+}
+
 /*Bouton go to top*/
 a#cRetour{
   border-radius:3px;
@@ -124,7 +147,7 @@ a#cRetour{
   font-size:15px;
   text-align:center;
   color:#fff;
-  background:rgba(218, 161, 13, 0.5);
+  background:rgba(255, 120, 0, 0.6);
   position:fixed;
   right:20px;
   opacity:1;
@@ -136,7 +159,7 @@ a#cRetour{
 }
 a#cRetour:before{ content: "\25b2"; }
 a#cRetour:hover{
-  background:rgba(218, 161, 13, 1);
+  background:rgba(255, 120, 0, 1);
   transition:all ease-in 0.2s;
 }
 a#cRetour.cInvisible{
