Edit des pages ventes final et des mention légale

--- a/css/accueil.css
+++ b/css/accueil.css
@@ -77,7 +77,7 @@ footer{
   right: 30px;
 }
 
-/*actus*/
+/*barre_déroulante*/
 #actu{
   width: 100%;
   height: 50%;
@@ -95,7 +95,6 @@ footer{
 .actuContainer{
   padding-bottom: 2%;
 }
-
 .promo img{
   width: 22%;
   height: 5%;
@@ -105,7 +104,6 @@ footer{
   float: left;
   border-radius: 0 20px 0 20px;
   border: 2px solid orange;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.7), -3px -3px 5px rgba(255, 255, 255, 0.5);
 }
 
 /*topvente*/
@@ -155,11 +153,11 @@ footer{
   border-radius: 20px;
   overflow: hidden;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.7), -3px -3px 5px rgba(255, 255, 255, 0.5);
-  background-color: rgb(255, 222, 0);
+  background-color: rgb(255, 120, 0);
 
 }
 .imgs h5{
-  color: red;
+  color: white;
   font-family: Arial, sans-serif;
   font-size: 1em;
   text-align: center;
@@ -184,17 +182,18 @@ button{
   text-decoration: underline;
   text-align: center;
 }
+#reduText{
+  font-family: sans-serif;
+  font-weight: bold;
+  text-align: center;
+}
 
 #réductions{
-  width: 70%;
-  height: 450px;
-  margin: 0 auto;
+  width: 100%;
+  height: 650px;
   background-image: url("../assets/game_imgs/image_jeu_promo.png");
   background-size:cover;
   background-repeat: no-repeat;
-  border-radius: 0 20px 0 20px;
-  border: 2px solid orange;
-  box-shadow: 6px 6px 4px rgba(0, 0, 0, 0.75);
 
   -webkit-filter:brightness(0.6);
   -moz-filter:brightness(0.6);
@@ -261,6 +260,8 @@ a#cRetour.cVisible{
   background-color: white;
   border: 1px solid black;
 }
+
+
 /*IMAGE DANS LA DIV DE PRESENTATION*/
 #imgPresentation{
   height: 100%;
