--- a/css/copyright.css
+++ b/css/copyright.css
@@ -5,7 +5,7 @@ body{
   width: 100%;
 }
 .mention {
-  background-color: Beige;
+  background-color: beige;
 }
 p{
   font-family: "Times New Roman", Georgia, sans-serif;
