--- a/css/contact.css
+++ b/css/contact.css
@@ -66,11 +66,13 @@ footer{
   list-style-type: none;
   color: white;
 }
+/*texte qui apparaît dans le footer*/
 #copy{
   position: relative;
   font-size: 15px;
   left: 35px;
 }
+/*Icône de fontawsome*/
 #icone{
   position: relative;
   font-size: 30px;
