--- a/css/accueil.css
+++ b/css/accueil.css
@@ -106,6 +106,7 @@ footer{
   float: left;
   border-radius: 0 20px 0 20px;
   border: 2px solid orange;
+  box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.7), -3px -3px 5px rgba(255, 255, 255, 0.5);
 }
 
 /*topvente*/
